app/Service.yml
###########################
# Cluster IP Service
###########################
kind: Service
apiVersion: v1
metadata:
  name: db
spec:
  type: NodePort
  selector:
    app: postgres-container
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 32000
