app/component_django.yaml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-postgre-deploy
  labels:
    app: django-postgre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-postgre
  template:
    metadata:
      labels:
        app: django-postgre
    spec:
      containers:
      - name: django-postgre
        image: app-djangoapp:latest
        #image: django-postgresql
        #imagePullPolicy: IfNotPresent
        command: ["python","./manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: django-postgre
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
