app/component_django.yml
###########################
# Deployment
###########################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-postgre-deploy
  labels:
    app: django-postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-postgre
  template:
    metadata:
      labels:
        app: django-postgre
    spec:
      containers:
      - name: django-app
        image: app-djangoapp:latest
        imagePullPolicy: Never
        command: ["bash", "-e", "./django.sh"]
        ports:
        - containerPort: 8000
---
###########################
# Cluster IP Service
###########################

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-postgre
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
